# bevy_jam_simulator

./: Cargo.toml  README.md  build.sh
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
assets/: config.ron
assets/font/: PyriousPixel.aseprite
misc/promo/: cover.aseprite
src/: audio.rs  camera.rs  config.rs  debug.rs  lib.rs  physics.rs  simulation.rs  state.rs  ui.rs  upgrade.rs  util.rs
src/simulation/: score.rs  sprite_pack.rs
src/state/: editor_screen.rs  end_screen.rs  game.rs  loading_screen.rs  mod.rs  results_screen.rs  splash_screen.rs  title_screen.rs
src/state/editor_screen/: code_panel.rs  code_view.rs  entity_view.rs  info_bar.rs  outline_panel.rs  scene_view.rs  system_view.rs  systems_view.rs  upgrade_button.rs  upgrade_panel.rs
src/state/game/: code_view.rs  entity_view.rs  systems_view.rs
src/ui/: button_color.rs  code_typer.rs  font.rs  interaction_color.rs  interaction_palette.rs  mod.rs  scroll.rs  tooltip.rs
src/upgrade/: cost_scaling.rs
src/util/: code_typer.rs  despawn.rs
web/: index.html  style.css
