[package]
name = "bevy_jam_template"
version = "0.1.0"
edition = "2021"
default-run = "run"

[dependencies]
bevy = { version = "0.12", default-features = false }
bevy_asset_loader = { version = "0.18", features = ["2d", "progress_tracking"] }
bevy_editor_pls = { version = "0.6", optional = true }
bevy_kira_audio = { version = "0.18", features = ["mp3"] }
bevy_mod_debugdump = { version = "0.9", optional = true }
bevy_rapier2d = "0.23"
iyes_progress = "0.10"
leafwing-input-manager = "0.11"
#noise = "0.8"
#rand = { version = "0.8", features = ["small_rng"] }
ron = "0.8"
serde = "1"
strum = { version = "0.25", features = ["derive"] }
tap = "1"
wasm-bindgen = { version = "0.2", optional = true }

[features]
core = [
    # Core functionality
    "bevy/bevy_core_pipeline",
    "bevy/bevy_winit",
    "bevy/x11",
    "bevy/bevy_render",
    "bevy/bevy_asset",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/multi-threaded",
    "bevy/webgl2",

    # Extra functionality
    #"bevy/bevy_gilrs",
    #"bevy/serialize",
    "bevy/subpixel_glyph_atlas",
    #"bevy/tonemapping_luts",

    # File formats
    "bevy/png",
]
dev = [
    "core",
    "dep:bevy_editor_pls",
    "bevy/dynamic_linking",
    "bevy_rapier2d/debug-render-2d",
]
native = ["core", "bevy_rapier2d/parallel"]
native_dev = ["native", "dev", "bevy/file_watcher", "bevy/embedded_watcher"]
web = ["core", "dep:wasm-bindgen", "bevy_rapier2d/wasm-bindgen"]
web_dev = ["web", "dev"]
trace = ["bevy/trace", "bevy/wgpu_trace", "bevy/trace_tracy"]
debug_dump = ["dep:bevy_mod_debugdump"]

[[bin]]
name = "debug"
required-features = ["debug_dump"]
